# WisperService

./: .gitignore  CMakeLists.txt  LICENSE  README.md  whisper_transcribe.service.in
include/: httplib.h  voice_transcribe.h
src/: voice_transcribe.cpp
